--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
           			
 					<ul style ="list-style: none; text-align:center; display:inline-block; padding:2px;">
 						<li><h3>Annihilate</h3></li>
-						<li><img src="images/Annihilate.png" alt="game" width="200" height="200"></li>
+						<li><img src="Annihilate.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="#" target="_blank">Play Game</a>
 						</li>
 					</ul>
 					<ul style ="list-style: none; text-align:center; display:inline-block;">
 						<li><h3>Harper's Busy Day</h3></li>
-						<li><img src="images/harper_busy_day.png" alt="game" width="200" height="200"></li>
+						<li><img src="harper_busy_day.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="#" target="_blank">Play Game</a>
 						</li>
 					</ul>
 					<ul style ="list-style: none; text-align:center; display:inline-block;">
 						<li><h3>Paint</h3></li>
-						<li><img src="images/paint.png" alt="game" width="200" height="200"></li>
+						<li><img src="paint.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="#" target="_blank">Play Game</a>
 						</li>
@@ -74,21 +74,21 @@
           					
 					<ul style ="list-style: none; text-align:center; display:inline-block;  padding:2px">
 						<li><h3>Paint</h3></li>
-						<li><img src="images/paint.png" alt="game" width="200" height="200"></li>
+						<li><img src="paint.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="#" target="_blank">Play Game</a>
 						</li>
 					</ul>
 					<ul style ="list-style: none; text-align:center; display:inline-block;">
 						<li><h3>Annihilate</h3></li>
-						<li><img src="images/Annihilate.png" alt="game" width="200" height="200"></li>
+						<li><img src="Annihilate.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="#" target="_blank">Play Game</a>
 						</li>
 					</ul>
 					<ul style ="list-style: none; text-align:center; display:inline-block;">
 						<li><h3>Pong</h3></li>
-						<li><img src="images/pong.png" alt="game" width="200" height="200"></li>
+						<li><img src="pong.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="#" target="_blank">Play Game</a>
 						</li>
